assignment3/app-2-ingress.yaml

# Define the API version and the resource type.
apiVersion: networking.k8s.io/v1
kind: Ingress

# Metadata for the Ingress.
metadata:
  # Name of the Ingress.
  name: app-2-ingress
  # Annotations for additional configuration.
  annotations:
    # Enables canary deployment with NGINX Ingress Controller.
    nginx.ingress.kubernetes.io/canary: "true"
    # Specifies the weight of traffic for canary deployment (30%).
    nginx.ingress.kubernetes.io/canary-weight: "30"

# Specification of the Ingress.
spec:
  # Rules for routing traffic to services.
  rules:
  - http:
      # HTTP routing configuration.
      paths:
      - path: /
        # Path type for the routing.
        pathType: Prefix
        # Backend service to route traffic to.
        backend:
          # Service to route traffic to.
          service:
            # Name of the backend service.
            name: app-2-service
            # Port number of the backend service.
            port:
              number: 8080
